Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@
 
 variables:
  - name: pullRequest
-   value: $[eq(variables['Build.Reason'], 'PullRequest')]
+   value: $(Build.Reason)
 
 steps: 
 - bash: echo $(pullRequest)
