--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,22 @@
-variables:
-  a: $(Build.Reason)
-  b: $(Build.BuildUri)
-  c: $(Build.BuildNumber)
-steps: 
-- bash: echo $(a)
-- powershell: echo $(b)
-- script: echo $(c)
+parameters:
+- name: image
+  displayName: Pool Image
+  type: string
+  default: ubuntu-latest
+  values:
+  - windows-latest
+  - vs2017-win2016
+  - ubuntu-latest
+  - ubuntu-16.04
+  - macOS-latest
+  - macOS-10.14
+
+trigger: none
+
+jobs:
+- job: build
+  displayName: build
+  pool: 
+    vmImage: ${{ parameters.image }}
+  steps:
+  - script: echo building $(Build.BuildNumber) with ${{ parameters.image }}
