Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,8 @@
 parameters:
 - name: image
   displayName: Pool Image
-  type: string
-  default: ubuntu-latest
   values:
-  - windows-latest
-  - vs2017-win2016
-  - ubuntu-latest
-  - ubuntu-16.04
-  - macOS-latest
-  - macOS-10.14
-
-trigger: none
+  - $(Build.BuildNumber)
 
 jobs:
 - job: build
@@ -19,4 +10,4 @@ jobs:
   pool: 
     vmImage: ${{ parameters.image }}
   steps:
-  - script: echo building $(Build.BuildNumber) with ${{ parameters.image }}
+  - script: echo building with ${{ parameters.image }}
