--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,21 @@
 parameters:
 - name: image
-  displayName: Pool Image
+  displayName: Vars
   values:
   - $(Build.BuildNumber)
+  - $(Build.Reason)
+  - $(Build.BuildUri)
 
 jobs:
 - job: build
-  displayName: build
+  displayName: buildnumber
+  steps:
+  - script: echo building with ${{ parameters.image }}
+- job: build
+  displayName: buildreason
+  steps:
+  - script: echo building with ${{ parameters.image }}
+- job: build
+  displayName: builduri
   steps:
   - script: echo building with ${{ parameters.image }}
