--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 parameters:
 - name: yesNo # name of the parameter; required
-  type: boolean # data type of the parameter; required
+  type: object # data type of the parameter; required
   default: $(Build.BuildNumber)
 
 steps:
