Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,11 @@
 parameters:
-- name: yesNo # name of the parameter; required
-  type: object # data type of the parameter; required
-  default: $(Build.BuildNumber)
-  values:
-    - $(Build.BuildNumber)
-    - $(Build.BuildId)
-    - $(Build.Reason)
+- name: listOfVars
+  type: object
+  default:
+  - $(Build.BuildNumber)
+  - $(Build.BuildId)
+  - $(Build.Reason)
 
 steps:
-- script: echo ${{ parameters.yesNo }}
+- ${{ each value in parameters.listOfVars }}:
+  - script: echo ${{ value }}
