--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ parameters:
   default:
   - $(Build.BuildNumber)
   - $(Build.BuildId)
-  - $(Build.Reason)
+  - $(Build.BuildUri)
 
 steps:
 - ${{ each value in parameters.listOfVars }}:
