--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
 - stage: BUILD2
   displayName: 'Package helm charts'
   pool:
-    name: agentvmss
+    name: vmss-pool
   jobs:
   - job: BUILD
     displayName: 'Package helm charts'
